<resources>
    <string name="app_name">Esport</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_home">Home</string>
    <string name="menu_guide">Guide</string>
    <string name="menu_news">News</string>
    <string name="menu_update">Update</string>
    <string name="menu_tour">Tournament</string>
    <string name="menu_support">Support</string>
    <string name="menu_login">Log in</string>
    <string name="menu_logout">Log out</string>
    <string name="menu_other">Other</string>

    <string name="menu_manage">Manage</string>
    <string name="menu_post">Posts</string>
    <string name="menu_cata">Catalog</string>
    <string name="menu_user">Users</string>
    <string name="menu_cmt">Comments</string>
    <string name="acc_email">guest@gmail.com</string>
    <string name="acc_name">Guest</string>
</resources>
