<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/mn_home"
            android:icon="@drawable/ic_menu_home_24dp"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/mn_guide"
            android:icon="@drawable/ic_menu_guide_24dp"
            android:title="@string/menu_guide" />

        <item
            android:id="@+id/mn_news"
            android:icon="@drawable/ic_menu_news_24dp"
            android:title="@string/menu_news" />
        <item
            android:id="@+id/mn_update"
            android:icon="@drawable/ic_menu_update_24dp"
            android:title="@string/menu_update" />
        <item
            android:id="@+id/mn_tour"
            android:icon="@drawable/ic_menu_tour_24dp"
            android:title="@string/menu_tour" />
        <item
            android:id="@+id/mn_sp"
            android:icon="@drawable/ic_menu_support_24dp"
            android:title="@string/menu_support" />
    </group>

    <item android:title="@string/menu_other">
        <menu>
            <item
                android:id="@+id/mn_login"
                android:icon="@drawable/login_24dp"
                android:title="@string/menu_login"
                android:visible="true" />
            <item
                android:id="@+id/mn_logout"
                android:icon="@drawable/logout_24px"
                android:title="@string/menu_logout"
                android:visible="false" />
        </menu>
    </item>

</menu>
